# comp34812

./: .gitignore  README.md  data-aug-synonym-replacement.py  data-augmentation-analysis.ipynb  data-augmentation-synonym-replacement.ipynb  data-augmentation.ipynb  dataset-analysis.ipynb  pyproject.toml  svm.ipynb  xgboost.ipynb
data/: Group_26_A.csv  positive_examples.csv  svm_predictions.csv  svm_predictions.csv.predict  synonym_replacement_all_MiniLM_l6_v2.json  synonym_replacement_all_MiniLM_l6_v2_v2.json  train_augmented.csv  train_augmented_og.csv  x_or_y_augmented_claims.csv
data/models/deberta/: adapter_config.json  added_tokens.json  hyperparameters.json  special_tokens_map.json  tokenizer_config.json
data/results/svm/: svm_0.json  svm_1.json  svm_10.json  svm_11.json  svm_12.json  svm_13.json  svm_14.json  svm_15.json  svm_16.json  svm_17.json  svm_18.json  svm_19.json  svm_2.json  svm_20.json  (+36 more)
models/: utils.py
models/random-forest/: random-forest.ipynb
models/sentence-transformer/: sentence-transformer.ipynb
models/svm/: svm.ipynb  svm_with_aug.ipynb
models/xgboost/: xgboost.ipynb  xgboost_with_aug.ipynb
research/: Enhanced LSTM for Natural Language Inference.md  Multi-turn Inference Matching Network for Natural Language Inference.md  Plan.md
src/: README.md  config.py
src/augmentation/: README.md
src/experiments/: README.md
src/models/: README.md
src/notebooks/: train-test-analysis.ipynb
src/utils/: FeatureExtractor.py  GloveVectorizer.py  LoggingPipeline.py  README.md  TextPreprocessor.py  extract_positive_examples.py  utils.py
(+55 files in other folders)
