[project]
name = "comp34812"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.3.2",
    "ipykernel>=6.29.5",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "sentence-transformers>=3.4.1",
    "torch>=2.6.0",
    "accelerate>=0.26.0",
    "torchvision>=0.21.0",
    "nltk>=3.9.1",
    "xgboost>=3.0.0",
    "googletrans>=4.0.2",
    "gensim>=4.3.3",
    "numpy==1.26.4",
    "scipy>=1.7.0",
    "tqdm>=4.67.1",
    "peft>=0.15.1",
    "transformers>=4.49.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
